--- a/package.json
+++ b/package.json
@@ -13,5 +13,9 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.3.0",
     "vite": "^2.9.0"
+  },
+  "engines": {
+    "npm": "8.5.5",
+    "node": "v14.16.1"
   }
 }
